<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.confpers.luan78912.configuracaopersonagem.PersonagemActivity">


    <RelativeLayout
        android:id="@+id/cabecalho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/titulo_criar_seu_personagem"
            android:textSize="24sp"
            android:textStyle="bold">

        </TextView>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rodape"
        android:layout_below="@id/cabecalho">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_nome" />

            <EditText
                android:id="@+id/etNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_sexo" />

            <RadioGroup
                android:id="@+id/rgSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbMasculino"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/label_masculino" />

                <RadioButton
                    android:id="@+id/rbTravecao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/label_travecao" />

                <RadioButton
                    android:id="@+id/rbFeminino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/label_feminino" />

            </RadioGroup>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_classe" />

            <Spinner
                android:id="@+id/spClasse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/classes" />

            <ImageView
                android:id="@+id/ivClasse"
                android:layout_width="128sp"
                android:layout_height="128sp"
                android:layout_gravity="center"
                android:src="@drawable/anao" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_forca" />

            <TextView
                android:id="@+id/tvForca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="0" />

            <SeekBar
                android:id="@+id/sbForca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10" />

            <Button
                android:id="@+id/btCriar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/botao_criar" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/rodape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="Desenvolvido por Fiap Games">

        </TextView>

    </RelativeLayout>

</RelativeLayout>
